<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:parentActivityName="com.example.Reminder.MainActivity"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/right_top_button"
        android:onClick="onClickToListen"
        android:paddingLeft="25dp"
        android:paddingBottom="10dp"
        android:text="@string/toListen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/left_top_button"
        android:onClick="onClickToCook"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/toCook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/left_bot_button"
        android:onClick="onClickToWatch"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:text="@string/toWatch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/right_bot_button"
        android:onClick="onClickToDo"
        android:paddingLeft="25dp"
        android:paddingTop="20dp"
        android:text="@string/toDo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/round_button"
        android:onClick="onClickAddNote"
        android:text="@string/addNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/settings_button"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/show_saved"
        android:onClick="onClickShowSaved"
        android:text="@string/showSaved"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>